--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,25 @@
-main.scss
+body{
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #f8f8f8;
+    color: #333;
+}
+
+header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #ff6347;
+    color: white;
+    padding: 1rem;
+
+
+   .logo  {
+    img  {
+        max-width: 100px;
+   }
+  }
+}
+
+
