Ajouter les dernieres modifications

--- a/sass/main.css
+++ b/sass/main.css
@@ -16,4 +16,6 @@ header {
 }
 header .logo img {
   max-width: 100px;
-}/*# sourceMappingURL=main.css.map */
+}
+/*# sourceMappingURL=main.css.map */
+
