--- a/sass/main.css
+++ b/sass/main.css
@@ -5,6 +5,10 @@ body {
   width: 100%;
 }
 
+main {
+  padding: 10px;
+}
+
 #loader {
   position: fixed;
   top: 0;
@@ -38,7 +42,8 @@ header .header-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px;
+  padding: 0;
+  width: 100%;
 }
 header .header-container .logo img {
   width: 150px;
@@ -66,9 +71,10 @@ header .header-container .local-container .localisation i {
 
 .intro {
   text-align: center;
-  padding: 20px;
   background-color: #F6F6F6;
   height: 220px;
+  width: 100%;
+  padding: 0;
 }
 .intro h2 {
   font-size: 24px;
@@ -102,8 +108,9 @@ header .header-container .local-container .localisation i {
 }
 
 .fonctionnement {
-  padding: 20px;
+  padding: 10px;
   text-align: center;
+  width: 100%;
 }
 .fonctionnement h2 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-seri;
@@ -111,6 +118,8 @@ header .header-container .local-container .localisation i {
   align-items: flex-start;
   font-size: 24px;
   font-weight: 700;
+  
+  
 }
 .fonctionnement .step {
   display: flex;
@@ -148,8 +157,9 @@ header .header-container .local-container .localisation i {
 
 .restaurants {
   width: 100%;
-  padding: 20px;
   background-color: #F6F6F6;
+  padding: 10px;
+  margin: auto;
 }
 .restaurants h2 {
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -157,7 +167,6 @@ header .header-container .local-container .localisation i {
   align-items: flex-start;
 }
 .restaurants .restaurant-card {
-  width: 85%;
   position: relative;
   margin-bottom: 20px;
   border: 1px solid #EAEAEA;
@@ -165,9 +174,12 @@ header .header-container .local-container .localisation i {
   overflow: hidden;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   background-color: white;
+  padding: 10PX;
   cursor: pointer;
 }
 .restaurants .restaurant-card img {
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
   width: 100%;
   height: auto;
   display: block;
@@ -205,9 +217,9 @@ header .header-container .local-container .localisation i {
 .restaurants .restaurant-card.new::after {
   content: "Nouveau";
   position: absolute;
-  top: 10px;
-  right: 10px;
-  background-color: #008766;
+  top: 25px;
+  right: 25px;
+  background-color: #99E2D0;
   color: white;
   padding: 5px 10px;
   font-size: 14px;
@@ -341,7 +353,7 @@ footer .footer-links a:hover {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 20px 50px;
+    padding: 10px;
   }
   footer .footer-links {
     justify-content: flex-start;
