--- a/sass/main.css
+++ b/sass/main.css
@@ -1,15 +1,39 @@
 body {
   margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+}
+
+.main-container {
   width: 100%;
 }
 
-main {
-  padding: 10px;
+h1, h2, h3 {
+  margin: 0;
+  padding: 0;
+  font-family: Roboto, sans-serif;
 }
 
-#loader {
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.fa-handshake-angle {
+  font-size: 12px;
+}
+
+.section-title {
+  margin: 0;
+  font-size: 24px;
+}
+
+.position {
+  width: 100%;
+  position: absolute;
+  z-index: 2;
+  top: 292px;
+}
+
+.loader {
   position: fixed;
   top: 0;
   left: 0;
@@ -19,15 +43,27 @@ main {
   justify-content: center;
   align-items: center;
   background-color: rgba(255, 255, 255, 0.8);
-  z-index: 1000;
+  z-index: 9999;
+  animation: fadeOut 3s forwards;
 }
-#loader .spinner {
+
+@keyframes fadeOut {
+  0% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+.spinner {
   border: 8px solid #9356DC;
   border-top: 8px solid #FF79DA;
   border-radius: 50%;
   width: 60px;
   height: 60px;
-  animation: spin is linear infinite;
+  animation: spin 2s linear infinite;
+  animation-delay: 3s;
 }
 
 @keyframes spin {
@@ -38,230 +74,298 @@ main {
     transform: rotate(360deg);
   }
 }
-header .header-container {
+@keyframes stopSpin {
+  0% {
+    transform: rotate(360deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+.header-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 0;
-  width: 100%;
 }
-header .header-container .logo img {
+.header-container .logo img {
   width: 150px;
-  padding-top: 10px;
+  padding: 17px 0px 16px 17px;
 }
-header .header-container .local-container {
+.header-container .local-container {
   background-color: #EAEAEA;
   width: 100%;
   height: 50px;
   display: flex;
+  align-items: center;
   justify-content: center;
-  margin-top: 10px;
-  box-shadow: 5px 0px 0px 5px rgba(0, 0, 0, 0.25);
+  margin-top: 5px;
+  box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
 }
-header .header-container .local-container .localisation {
+.header-container .localisation {
   display: flex;
   align-items: center;
   font-size: 16px;
   font-weight: 500;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: Roboto;
 }
-header .header-container .local-container .localisation i {
-  margin-right: 10px;
+.header-container .localisation i {
+  margin-right: 13px;
+}
+
+section {
+  padding: 30px 0;
 }
 
 .intro {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background-color: #F6F6F6;
-  height: 220px;
-  width: 100%;
-  padding: 0;
+  text-align: center;
+  padding: 39px 34px 57px 26px;
 }
-.intro h2 {
+.intro .intro-title {
+  font-family: Roboto;
   font-size: 24px;
   font-weight: bold;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  margin-top: 5px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  width: 76%;
 }
-.intro p {
-  font-size: 18px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: 300;
+.intro .intro-subtitle {
+  font-size: 16px;
+  font-family: Roboto;
+  color: darkgrey;
 }
-.intro .explore-btn {
-  width: 190px;
-  height: 45px;
-  background: linear-gradient(#9356DC, #FF79DA);
+
+.explore-btn {
+  padding: 13px 18px;
+  margin: 0;
+  border-radius: 24px;
   color: white;
-  padding: 10px 20px;
+  font-size: 16px;
   border: none;
-  border-radius: 30px;
+  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
+  background: linear-gradient(#FF79DA, #9356DC);
+  font-family: Roboto;
   cursor: pointer;
-  transition: background-color 0.3s, box-shadow 0.3s;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
-.intro .explore-btn:hover {
-  background-color: #9356DC;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+.explore-btn:hover {
+  background: linear-gradient(#FF79DA, #9356DC);
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.25);
+}
+
+.commander {
+  text-align: center;
+}
+.commander_explore-btn {
+  padding: 16px 48px 15px 49px;
 }
 
 .fonctionnement {
-  padding: 10px;
-  text-align: center;
-  width: 100%;
+  margin: 0 20px;
+  padding: 48px 0;
 }
-.fonctionnement h2 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-seri;
-  display: flex;
-  align-items: flex-start;
-  font-size: 24px;
-  font-weight: 700;
-  
-  
+.fonctionnement__title {
+  font-family: Roboto;
+  font-size: 22px;
+  font-weight: bold;
+  margin-bottom: 24px;
 }
-.fonctionnement .step {
+.fonctionnement__step-card {
   display: flex;
   align-items: center;
-  justify-content: center;
-  margin: 10px 0;
-  width: 300px;
-  height: 70px;
-  background-color: #F6F6F6;
-  border-radius: 20px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  position: relative;
+  padding-bottom: 24px;
+  cursor: pointer;
 }
-.fonctionnement .step .step-number {
+.fonctionnement__step-number {
   background-color: #9356DC;
   color: white;
-  width: 25px;
-  height: 25px;
-  border-radius: 50%;
-  justify-content: center;
+  width: 24px;
+  height: 24px;
+  border-radius: 16px;
+  border: none;
+  justify-content: space-around;
   display: flex;
+  align-items: center;
   position: absolute;
-  top: 50%;
-  left: 0;
-  transform: translate(-50%, -50%);
+  z-index: 1;
+  font-weight: bold;
+  font-size: 13px;
 }
-.fonctionnement .step i {
-  margin-right: 10px;
+.fonctionnement__step-content {
+  display: flex;
+  gap: 26px;
+  border-radius: 20px;
+  background-color: #F6F6F6;
+  padding: 28px 38px;
+  position: relative;
+  left: 12px;
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
+  width: 244px;
 }
-.fonctionnement .step p {
-  margin: 0;
+.fonctionnement__step-content:hover {
+  background-color: #F6F6F6;
+  color: black;
+}
+.fonctionnement__step-content:hover i {
+  color: #9356DC;
+}
+.fonctionnement__step-content__step-text {
+  font-weight: 500;
+  font-family: Roboto, sans-serif;
+}
+.fonctionnement__step-content i {
+  font-size: 20px;
+}
+
+.restaurant-bg {
+  background-color: #F6F6F6;
 }
 
 .restaurants {
-  width: 100%;
-  background-color: #F6F6F6;
-  padding: 10px;
-  margin: auto;
+  padding-top: 54px;
+  padding-bottom: 66px;
+  margin: 0 15px;
 }
-.restaurants h2 {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  display: flex;
-  align-items: flex-start;
-}
-.restaurants .restaurant-card {
-  position: relative;
-  margin-bottom: 20px;
-  border: 1px solid #EAEAEA;
-  border-radius: 20px;
-  overflow: hidden;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  background-color: white;
-  padding: 10PX;
-  cursor: pointer;
-}
-.restaurants .restaurant-card img {
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
-  width: 100%;
-  height: auto;
-  display: block;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.restaurants .restaurant-card .card-content {
-  padding: 10px;
-  display: flex;
-  flex-direction: column;
-}
-.restaurants .restaurant-card .card-content .card-title {
-  font-size: 18px;
-  margin: 0 0 5px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: 700;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-.restaurants .restaurant-card .card-content .card-title i {
-  cursor: pointer;
-}
-.restaurants .restaurant-card .card-content .card-title .heart-color {
-  color: #9356DC;
-}
-.restaurants .restaurant-card .card-content .card-subtitle {
-  margin: 0;
-  font-size: 17px;
-  text-decoration: none;
-  font-weight: 300;
-  color: black;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-.restaurants .restaurant-card.new::after {
-  content: "Nouveau";
-  position: absolute;
-  top: 25px;
-  right: 25px;
-  background-color: #99E2D0;
-  color: white;
-  padding: 5px 10px;
-  font-size: 14px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: 500;
-  border-radius: 5px;
+.restaurants__title {
+  margin-bottom: 26px;
 }
 
-footer {
-  background-color: black;
-  color: white;
-  padding: 20px 0;
-  text-align: center;
+.card {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border-radius: 15px;
+  margin: 20px;
+  width: 100%;
+  position: relative;
+  z-index: 1;
+  margin-left: 0;
 }
-footer footer.logo img {
-  margin-bottom: 10px;
+.card img {
+  height: 170px;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
 }
-footer .footer-links {
+.card__badge {
+  display: flex;
+  flex-direction: row-reverse;
+}
+.card__badge--nouveau {
+  position: absolute;
+  font-size: 14px;
+  border: none;
+  background-color: #99e2d0;
+  color: darkgreen;
+  padding: 7px 9px 6px;
+  margin-top: 15px;
+  margin-right: 15px;
+  border-radius: 2px;
+  z-index: 2;
+}
+.card__content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 16px 25px 16px 16px;
+}
+.card__title {
+  margin: 0;
+  margin-bottom: 5px;
+  font-size: 18px;
+  font-family: Roboto, sans-serif;
+}
+.card__subtitle {
+  margin: 0;
+  font-size: 17px;
+  font-family: Roboto, sans-serif;
+}
+.card .img {
+  width: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  border-radius: 15px;
+}
+.card .restaurants__cards {
   display: flex;
   flex-direction: column;
 }
-footer .footer-links a {
-  color: white;
-  text-decoration: none;
-  margin: 5px 0;
-  font-size: 16px;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-weight: 500;
-  display: flex;
-  align-items: flex-start;
-  margin-left: 20px;
-  margin: 10px;
+.card .restaurants__cards a {
+  width: 100%;
+  flex-grow: 0;
 }
-footer .footer-links a:hover {
-  text-decoration: underline;
+.card .favorite {
+  cursor: pointer;
+  padding-bottom: 26px;
+  padding-right: 29px;
+}
+.card .favorite i {
+  position: absolute;
+}
+.card .favorite__full {
+  opacity: 0;
+  background-image: linear-gradient(#9356DC, #FF79DA);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: 2s ease-out;
+}
+.card .favorite__full:hover, .card .favorite__full:active {
+  display: inline;
+  opacity: 1;
+  background-image: linear-gradient(#9356DC, #FF79DA);
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  transition: 300ms ease-out;
+}
+
+.fa-heart {
+  font-size: 24px;
+}
+
+.infos {
+  background-color: black;
+  color: white;
+}
+.infos--padding {
+  padding: 22px 25px;
+  display: block;
+}
+.infos_logo {
+  font-size: 18px;
+  padding-right: 0;
+  font-family: Shrikhand;
+  font-style: italic;
+  font-weight: 100;
+}
+.infos_content {
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
+  list-style-type: none;
+  padding-left: 0;
+  margin-bottom: 0;
+}
+.infos_content--position {
+  display: flex;
+  align-items: center;
+  gap: 11px;
+}
+.infos .contact-partenaire, .infos .contact {
+  margin-right: 0;
 }
 
 @media (min-width: 768px) {
+  .step-container {
+    padding: 0 90px;
+  }
+  .position {
+    top: 496px;
+  }
   .header-container {
-    max-width: 1000px;
-    margin: 0 auto;
-    padding: 0 20px;
+    width: 100%;
   }
   .logo img {
     width: 150px;
@@ -270,6 +374,7 @@ footer .footer-links a:hover {
     display: flex;
     align-items: center;
     font-size: 18px;
+    font-family: Roboto sans-serif;
   }
   .localisation I {
     margin-right: 10px;
@@ -278,11 +383,13 @@ footer .footer-links a:hover {
     text-align: center;
     padding: 50px 0;
   }
-  .intro h2 {
-    font-size: 36px;
+  .intro .intro-title {
+    font-size: 40px;
     margin-bottom: 20px;
+    white-space: nowrap;
+    font-family: Roboto sans-serif;
   }
-  .intro p {
+  .intro .intro p {
     font-size: 18px;
     margin-bottom: 40px;
   }
@@ -290,75 +397,155 @@ footer .footer-links a:hover {
     white-space: nowrap;
   }
   .fonctionnement {
-    text-align: center;
+    margin: 0;
     padding: 50px 0;
+  }
+  .fonctionnement__steps-cards {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    justify-content: space-evenly;
+  }
+  .fonctionnement__step-card {
+    padding-bottom: 0;
+  }
+  .fonctionnement__step-content {
+    padding: 28px;
+    width: 80%;
+  }
+  .fonctionnement a {
+    width: 48%;
+  }
+  .restaurants__cards {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+    gap: 50px 100px;
+    margin: 0;
+    padding-bottom: 30px;
   }
-  .fonctionnement h2 {
-    font-size: 30px;
-    margin-top: 0;
+  .restaurants__cards a {
+    width: 30%;
+    flex-grow: 1;
   }
-  .fonctionnement .step {
-    margin: 20px;
+  .card__content {
+    margin: 16px 25px 16px 18px;
   }
-  .restaurants {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
+  .infos {
+    display: flex;
+    flex-direction: row-reverse;
   }
-  .restaurants .restaurant-card:hover {
-    transform: scale(1.02);
+  .infos--padding {
+    padding: 57px 25px 30px;
+  }
+  .infos__logo {
+    padding-right: 12px;
+  }
+  .infos__content {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  .infos__content--position {
+    display: flex;
+    align-items: center;
+    gap: 11px;
+  }
+  .infos .contact-partenaire {
+    margin-right: 20px;
+  }
+  .infos .contact {
+    margin-right: 40px;
   }
 }
 @media (min-width: 1024px) {
-  .header-container {
-    max-width: 1200px;
-  }
-  .local-container {
-    width: 100%;
-  }
-  .intro h2 {
-    font-size: 56px;
+  .intro .intro-title {
+    font-size: 40px;
     white-space: nowrap;
+    font-family: Roboto sans-serif;
+    font-weight: 700;
   }
-  .intro p {
+  .intro .intro p {
     font-size: 28px;
   }
   .intro .explore-btn {
     font-size: 14px;
   }
   .fonctionnement {
+    margin: 0;
+    padding: 50px 0;
+  }
+  .fonctionnement__title {
+    margin-left: 180px;
+    font-family: Roboto sans-serif;
+    font-size: 25px;
+  }
+  .fonctionnement__steps-cards {
+    display: flex;
+    gap: 32px;
+    margin-left: 60px;
+    justify-content: space-around;
+  }
+  .fonctionnement__step-card {
+    padding-bottom: 0;
+    display: flex;
+  }
+  .fonctionnement__step-content {
+    padding: 28px 44px 28px 30px;
+    width: 100%;
+  }
+  .fonctionnement a {
+    width: 30%;
+  }
+  .restaurants__cards {
+    margin: 10px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 50px 100px;
+    margin-left: 160px;
+  }
+  .restaurants__cards a {
+    width: 30%;
+    flex-grow: 1;
+  }
+  .restaurants__cards .card {
+    width: 499px;
+    display: flex;
+    justify-content: center;
+  }
+  .restaurants__cards .card img {
+    width: 499px;
+    height: 231px;
+  }
+  .restaurants__cards .card__content {
+    margin: 16px 25px 16px 18px;
+  }
+  .restaurants__title {
+    margin-left: 160px;
+  }
+  .infos--padding {
+    padding: 57px 25px 30px;
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .infos_logo {
+    padding-right: 44px;
+  }
+  .infos_content {
+    flex-direction: row;
+    align-items: center;
+    margin: 0;
+  }
+  .infos_content--position {
     display: flex;
     align-items: center;
-    margin-bottom: 50px;
+    gap: 11px;
   }
-  .fonctionnement h2 {
-    margin-bottom: 20px;
+  .infos.contact-partenaire {
+    margin-right: 40px;
   }
-  .fonctionnement .step {
-    display: flex;
-    align-items: center;
-    text-align: center;
-    margin: 0 20px;
-    height: 70px;
-  }
-  .restaurants {
-    grid-template-columns: repeat(3, 1fr);
-  }
-  .restaurants .restaurant-card:hover {
-    transform: scale(1.01);
-  }
-  footer {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 10px;
-  }
-  footer .footer-links {
-    justify-content: flex-start;
-  }
-  footer .footer-logo img {
-    width: 120px;
+  .infos .contact {
+    margin-right: 70px;
   }
 }/*# sourceMappingURL=main.css.map */
