--- a/sass/resto1.scss
+++ b/sass/resto1.scss
@@ -1,97 +1,111 @@
 body {
     margin: 0;
-    padding: 0;
     
-    
-
+}
+.main-container {
+    width: 100%;
 }
 
+
     .header-container  {
-    
-    
-    
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 10px 20px;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     }  
-        
-      .link a {
-        font-size: 24px;
-    
-
-      }  
-
-
+     .link a {
+        font-size: 15px;
+    }  
     .logo img {
-        height: 20px;
+      font-size: 50px;
         
     }
-    
-        
-        
-    
- 
 
 
-main {
-    padding: 20px;
-    background-color:#f3f3f3;
-
-
-
-    
-    
-    
-    }
-
-    .restaurant img{
+    .image-bg{
         width: 100%;
-        height: auto;
-        border-radius: 10px;
-    }
-    .restaurant h1 {
-        font-style:italic;
-        font-size: 28px;
-        font-weight: 400;
-        margin-top: 10px;
-        display: flex;
-        justify-content: flex-start;
-        align-items: center;
-    }
-    .restaurant i {
-        font-size: 24px;
-        margin-left: 40px;
-        cursor: pointer;
-
-        i :hover{
-            color: aqua;
-        }
-    }
-     .menu {
-        margin-top: 32px;
-        
-        h2, h3, h4 {
-        font-size: 20px ;
-        
-
-      }
-
-      .menu-item{
-        background-color:white;
-        padding: 16px;
-        border-radius: 20px;
-        box-shadow: 0 2px 4px rgba(0, 0, 0,0.1);
-        margin-bottom: 16px;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
+        height: 100%;
+        object-fit: cover;
         position: relative;
-        cursor: pointer;
-        height:40px;
-    }
+        z-index: 1;
      }
+    .restaurant {
+        display: flex;
+        align-items:normal;
+        flex-direction: column;
+        background-color: #f6f6f6;
+        border-top-right-radius: 40px;
+        border-bottom-left-radius: 40px;
+        padding: 32px 13px 40px;
+        margin: 0;
+
+         &__headline {
+            display: flex;
+
+             & .title {
+                font-size: 28px;
+                font-family: shrikhand;
+                font-style: italic;
+
+            }
+         }
+         
+
+         }
+    
+    
+    
+
+        
+    
+     .menu {
+        padding-top: 40px;
+        
+        
+            &__card {
+                display: flex;
+                padding: 0;
+                margin-top: 12px;
+                box-shadow: 0px 4px 15px 0px rgba( 0, 0, 0, 0.10);
+                background-color: white;
+                overflow: hidden;
+                position: relative;
+                border-radius: 15px;
+                
+                &:hover .price {
+                    margin-right: 70px;
+                }
+                &:hover .menu__check {
+                    margin-right: -10px;
+                }
+                &:hover .menu__infos {
+                    &--subtitle {
+                        text-overflow: ellipsis;
+                        overflow: hidden;
+                    }
+                }
+            }
+            &__list {
+                display: flex;
+                width: 42px;
+                border-bottom: 3px solid #99E2D0 ;
+
+                &--title {
+                    font-size: 24px;
+                    width: 86%;
+                }
+            }
+            
+        }
+
+        
+
+        
+    .heart {
+        padding-right: 26px;
+        padding-top: 2px;
+    }
 
     
 
