--- a/sass/main.scss
+++ b/sass/main.scss
@@ -12,7 +12,7 @@ body {
 h1, h2,h3 {
   margin: 0;
   padding: 0;
-  font-family: Roboto, sans-serif;
+  font-family: Roboto;
 }
 
 a{
@@ -454,7 +454,7 @@ width: 244px;
 
 
 .infos{
-  background-color: black;
+  background-color:#353535;
   color: white;
   &--padding{
     padding: 22px 25px;
@@ -490,12 +490,8 @@ width: 244px;
 
 
 
-@media (min-width: 768px)  {
-  .step-container {
-    padding: 0 90px;
-    
-
-  }
+@media (min-width: 767.98px) and ( max-width: 1024px)  {
+  
   .position{
     top: 496px;
   }
@@ -536,34 +532,19 @@ width: 244px;
   .intro .explore-btn {
     white-space: nowrap;
   }
-  .fonctionnement {
-    margin: 0;
-    padding: 50px 0;
+  
+    
+    
 
-    &__steps-cards{
-      display: flex;
-      flex-wrap: wrap;
-      gap: 24px;
-      justify-content: space-evenly;
-    }
-    &__step-card{
-      padding-bottom: 0;
-      
-    }
-    &__step-content{
-      padding: 28px;
-      width: 80%;
-    }
-    & a{
-      width: 48%;
-    }
+    
+  
     
     
   
   
   
 
-  }
+  
   .restaurants__cards{
       display: flex;
       flex-direction: row;
@@ -581,10 +562,13 @@ width: 244px;
   
 
  .card{
+  width: 100%;
+  
     &__content{
       margin: 16px 25px 16px 18px;
     }
 }
+
 
 
     .infos {
@@ -633,18 +617,28 @@ width: 244px;
 
 @media  (min-width: 1024px) {
   
+  .header-container{
+
   
+  .logo img{
+    width: 200px;
+    
+  }
+  
+
+  }
       .intro{
 
       
   .intro-title {
     font-size: 40px;
     white-space: nowrap;
-    font-family: Roboto sans-serif;
-    font-weight: 700;
+    font-family: Roboto;
+    
+    
   }
   .intro p {
-    font-size: 28px;
+    font-size: 30px;
   }
   
 
@@ -657,8 +651,8 @@ width: 244px;
     padding: 50px 0;
     
     &__title{
-      margin-left: 180px;
-      font-family: Roboto  sans-serif;
+      margin-left: 270px;
+      font-family: Roboto;
       font-size: 25px;
 
     }
@@ -666,19 +660,16 @@ width: 244px;
     &__steps-cards{
       display: flex;
       gap: 32px;
-      margin-left: 60px;
+      margin-left: 270px;
+    
       
-      justify-content: space-around;
+    
     
       
     }
     &__step-card{
-      padding-bottom: 0;
-      display: flex;
-    
-  
-      
-      
+      width: 330px;
+      height: 72px;
     }
     &__step-content {
       padding:28px 44px 28px 30px;
@@ -695,7 +686,6 @@ width: 244px;
 
   
    
-    
   
   
 
@@ -703,12 +693,17 @@ width: 244px;
 
 
 .restaurants__cards{
-  margin:10px;
+
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  gap: 50px 100px;
-  margin-left: 160px;
+  gap:  50px 100px;
+  margin-left: 260px;
+  margin-right: 200px;
+  
+  
+  
+  
   
   
 
@@ -723,15 +718,11 @@ width: 244px;
   
 
 .card{
-  width: 499px;
-  display: flex;
-  justify-content: center;
-  img {
-    width: 499px;
-    height: 231px;
-    
+  width: 100%;
+  
+  
 
-    }
+  
   
   
   
@@ -749,8 +740,11 @@ width: 244px;
 
 }
 
+
+
 .restaurants__title{
-  margin-left: 160px;
+  margin-left: 260px;
+  
 }
 
 .infos {
@@ -760,7 +754,9 @@ width: 244px;
       flex-direction: row-reverse;
     }
     &_logo{
-      padding-right: 44px;
+      padding-right: 84px;
+    
+      
       
     }
     &_content{
@@ -771,14 +767,16 @@ width: 244px;
       &--position{
         display: flex;
         align-items: center;
-        gap: 11px;
+        gap: 10px;
+      
+        
       }
     }
-    &.contact-partenaire {
-      margin-right: 40px;
+    .contact-partenaire {
+      margin-right: 80px;
     }
        & .contact{
-        margin-right: 70px;
+        margin-right: 90px;
        }
 
 }
