--- a/sass/resto1.scss
+++ b/sass/resto1.scss
@@ -9,7 +9,9 @@ a{
     color: inherit;
     text-decoration: none;
 }
-
+h3{
+    margin: 0;
+}
 
     .header-container  {
         box-shadow: 0 2px 4px rgba(0,0,0,0.1);
