--- a/sass/resto1.css
+++ b/sass/resto1.css
@@ -178,7 +178,7 @@ h3 {
   display: flex;
   align-items: center;
   font-size: 24px;
-  background-color: #9356DC;
+  background-color: #008766;
   border-top-right-radius: 15px;
   border-bottom-right-radius: 15px;
   position: absolute;
@@ -187,7 +187,7 @@ h3 {
   transition: 400ms ease-in-out;
   margin-right: -100px;
 }
-.restaurant .menu__check .fa-check {
+.restaurant .menu__check .fa-solid {
   color: white;
   margin-left: 18px;
 }
@@ -241,10 +241,14 @@ h3 {
   display: flex;
   flex-direction: column;
   gap: 9px;
+  list-style-type: none;
+  padding-left: 0;
+  margin-bottom: 0;
 }
 .infos_content--position {
   display: flex;
   align-items: center;
+  gap: 11px;
 }
 .infos .contact-partenaire, .infos .contact {
   margin-right: 0;
@@ -259,10 +263,10 @@ h3 {
     width: 200px;
   }
   .image-bg {
-    height: 454px;
+    height: 445px;
   }
   .restaurant {
-    padding: 51px 20px 40px;
+    padding: 51px 10px 40px;
     margin: 0 192px;
     align-items: center;
   }
@@ -273,5 +277,35 @@ h3 {
   }
   .restaurant .favorite {
     padding-bottom: 80px;
+  }
+  .infos--padding {
+    padding: 57px 25px 30px;
+    display: flex;
+    flex-direction: row-reverse;
+  }
+  .infos_logo {
+    padding-right: 84px;
+  }
+  .infos_content {
+    flex-direction: row;
+    align-items: center;
+    margin: 0;
+  }
+  .infos_content--position {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+  .infos .contact-partenaire {
+    margin-right: 80px;
+  }
+  .infos .contact {
+    margin-right: 90px;
+  }
+}
+@media (min-width: 767.98px) and (max-width: 1024px) {
+  .restaurant__headline {
+    display: flex;
+    justify-content: center;
   }
 }/*# sourceMappingURL=resto1.css.map */
