--- a/sass/resto1.scss
+++ b/sass/resto1.scss
@@ -211,7 +211,7 @@ h3{
                 display: flex;
                 align-items: center;
                 font-size: 24px;
-                background-color: #9356DC;
+                background-color:#008766;
                 border-top-right-radius: 15px;
                 border-bottom-right-radius: 15px;
                 position: absolute;
@@ -219,7 +219,7 @@ h3{
                 top: 0;
                 transition: 400ms ease-in-out;
                 margin-right: -100px;
-                & .fa-check{
+                & .fa-solid{
                     color: white;
                     margin-left: 18px;
                 }
@@ -282,12 +282,16 @@ h3{
             display: flex;
             flex-direction: column;
             gap: 9px;
+            list-style-type: none;
+            padding-left: 0;
+            margin-bottom: 0;
             
             
             
             &--position {
                 display: flex;
                 align-items: center;
+                gap: 11px;
                 
             }
          }
@@ -311,10 +315,10 @@ h3{
         }
         
         .image-bg {
-            height: 454px;
+            height: 445px;
         }
         .restaurant{
-            padding: 51px 20px 40px;
+            padding: 51px 10px 40px;
             margin: 0 192px;
             align-items: center;
             
@@ -327,10 +331,55 @@ h3{
                 padding-bottom: 80px;
             }
         }
+        .infos {
+             &--padding {
+                padding: 57px  25px  30px;
+                display: flex;
+                flex-direction: row-reverse;
+           }
+             &_logo {
+            padding-right: 84px;
+           }
+           &_content {
+            flex-direction: row;
+            align-items: center;
+            margin: 0;
+            &--position{
+                display: flex;
+                align-items: center;
+                gap: 10px;
+            }
+           }
+           .contact-partenaire{
+            margin-right: 80px;
+           }
+           .contact{
+            margin-right: 90px;
+           }
+        }
+        }
+         @media (min-width: 767.98px) and (max-width: 1024px) {
+.restaurant{ 
+    
+    &__headline{
+        display: flex;
+        justify-content: center;
+    }
+    
+        
         
 
-        }
+    
+    
         
+    }
+
+}
+            
+         
+   
+
+    
 
         
             
